@@ -1,8 +1,28 @@
+/*
+ * Copyright (c) 2026 derreisende77.
+ * This code was developed as part of the MediathekView project https://github.com/mediathekview/MediathekView
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
 package mediathek.x11;
 
 import mediathek.config.Konstanten;
 import mediathek.config.MVConfig;
 import mediathek.mainwindow.MediathekGui;
+import mediathek.tool.ApplicationConfiguration;
+import mediathek.tool.ProcessCommandUtils;
 import mediathek.tool.notification.GenericNotificationCenter;
 import mediathek.tool.notification.INotificationCenter;
 import mediathek.tool.notification.LinuxNotificationCenter;
@@ -29,6 +49,16 @@ public class MediathekGuiX11 extends MediathekGui {
     protected void createMenuBar() {
         super.createMenuBar();
         createDarkModeMenuAction();
+    }
+
+    @Override
+    protected void setupSystemTray() {
+        final var useTray = config.getBoolean(ApplicationConfiguration.APPLICATION_UI_USE_TRAY, false);
+        if (!DesktopEnvDetector.trayIconSupported() && useTray) {
+            logger.warn("Application tray icon is not supported on this platform, deactivating.");
+            config.setProperty(ApplicationConfiguration.APPLICATION_UI_USE_TRAY, false);
+        }
+        super.setupSystemTray();
     }
 
     /**
@@ -73,7 +103,7 @@ public class MediathekGuiX11 extends MediathekGui {
 
         try {
             logger.info("Shutdown: {}", strShutdownCommand);
-            Runtime.getRuntime().exec(strShutdownCommand);
+            new ProcessBuilder(ProcessCommandUtils.tokenizeCommand(strShutdownCommand)).start();
         } catch (IOException ex) {
             logger.error(ex);
         }
